tests/baselines/reference/privateStaticMemberAccessibility.errors.txt
==== tests/cases/conformance/classes/members/accessibility/privateStaticMemberAccessibility.ts (2 errors) ====
    class Base {
        private static foo: string;
    }
    
    class Derived extends Base {
        static bar = Base.foo; // error
                     ~~~~~~~~
!!! error TS2341: Property 'Base.foo' is inaccessible.
        bing = () => Base.foo; // error
                     ~~~~~~~~
!!! error TS2341: Property 'Base.foo' is inaccessible.
    }